--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,9 +6,9 @@
       </div>
 
       <div class="grid text-center justify-items-center">
-        <a href="" class="col-4"><strong>HOME PAGE</strong></a>
-        <a href="" class="col-4"><strong>CHI SIAMO</strong></a>
-        <a href="" class="col-4"><strong>DOVE SIAMO</strong></a>
+        <a href='/home' class="col-4"><strong>HOME PAGE</strong></a>
+        <a href="/chi-siamo" class="col-4"><strong>CHI SIAMO</strong></a>
+        <a href="/dove-siamo" class="col-4"><strong>DOVE SIAMO</strong></a>
       </div>
 
       <hr>
@@ -18,4 +18,4 @@
 
 <mail-form></mail-form>
 
-<home-page></home-page>
+<router-outlet></router-outlet>
