--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,4 +1,6 @@
 <div class="grid h-full" style="background-color: #ffa50042;">
-  <img class="col-4" src="./../../assets/foto_2.jpg" alt="">
-  <span class="col-5">Siamo un agenzia che permette di adoperare su tutto il territorio europeo</span>
+  <div class="col-4">
+    <img class="w-full" src="./../../assets/foto_2.jpg" alt="">
+  </div>
+  <span class="col-4">Siamo un agenzia che permette di adoperare su tutto il territorio europeo</span>
 </div>
